# khinsider-dl

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: curl_handler.cpp  curl_handler.h  main.cpp  url.cpp  url.h
src/tests/: test_url.cpp
